--- a/client/bem_components/header/header.styl
+++ b/client/bem_components/header/header.styl
@@ -189,9 +189,6 @@
 	padding 0 0 0 40px!important
 	@media screen and (max-width:1170px)
 		padding 0 40px!important
-		
-.menu--with-logentry .menu-link
-	margin-top -1px
 
 	
 .menu-area .menu-link, 
@@ -218,9 +215,10 @@
 		
 .menu-area .logentry
 	background-color #39393d
-	padding 10px 25px
+	padding 9px 25px 11px 25px
 	color #FFF
 	text-align left
+	margin-top -1px
 	
 .menu-area .logentry__link
 	transition all .2s ease-in-out
