--- a/client/bem_components/common/common.css
+++ b/client/bem_components/common/common.css
@@ -84,6 +84,7 @@ a:focus {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
+  margin-top: -1px;
 }
 .content {
   position: relative;
