--- a/client/bem_components/common/common.styl
+++ b/client/bem_components/common/common.styl
@@ -52,6 +52,7 @@ a, a:hover, a:active, a:focus
 	background-position center
 	background-repeat no-repeat
 	background-size cover
+	margin-top -1px
 	
 .content
 	position relative
