--- a/client/bem_components/mobile-menu/mobile-menu.styl
+++ b/client/bem_components/mobile-menu/mobile-menu.styl
@@ -97,6 +97,9 @@
 	transition all .2s ease-in-out
 	&:hover
 		background-color #4DB6AC
+		
+.list__item--active
+	background-color #4DB6AC
 			
 .menu-divider
 	width 100%
