--- a/client/bem_components/common/common.styl
+++ b/client/bem_components/common/common.styl
@@ -48,10 +48,8 @@ a, a:hover, a:active, a:focus
 .container-fluid
 	background $bg-color
 	padding 0
-	background-image url(./img/common-bg.png)
-	background-position center
-	background-repeat no-repeat
-	background-size cover
+	width 100%
+	height auto
 	margin-top -1px
 	
 .content
@@ -61,5 +59,30 @@ a, a:hover, a:active, a:focus
 	height auto
 	margin 0 auto
 	padding 25px
+	z-index 1
+	
+.header__bg
+	position absolute
+	z-index 0
+	width 100%
+	height 800px
+	background-image url(./img/header-bg.png)
+	background-position center
+	background-repeat no-repeat
+	background-size cover
+	
+.footer__bg
+	position relative
+	z-index 0
+	margin-top -600px
+	width 100%
+	height 600px
+	background-image url(./img/footer-bg.png)
+	background-position center
+	background-repeat no-repeat
+	background-size cover
+	@media screen and (max-width:992px)
+		margin-top -1000px
+		height 1000px
 	
 	
